--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="styles/colorpag.css">
   <link href="styles/main.css" rel="stylesheet">
+  
+  <link rel="stylesheet" type="text/css" href="scripts/jquery.jscrollpane.min.js" />
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery.jscrollpane.min.js"></script>
+    <script type="text/javascript">
+      jQuery(document).ready(function () {
+          if (!jQuery.browser.webkit) {
+              jQuery('.site-content').jScrollPane();
+          }
+      });
+    </script>
 </head>
 <body id="top">
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -29,7 +40,7 @@
         
       </header>
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Inicio</a><a class="mdl-navigation__link" href="portfolio.html">Candidatos</a><a class="mdl-navigation__link" href="about.html">Consejos</a><a class="mdl-navigation__link" href="contact.html">Contáctenos</a>
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Inicio</a><a class="mdl-navigation__link" href="#">Candidatos</a><a class="mdl-navigation__link" href="#">Consejos</a><a class="mdl-navigation__link" href="#">Contáctenos</a>
         </nav>
       </div>
       
@@ -45,7 +56,7 @@
                 Partido de Representantes ante Consejo Universitario, Consejo de Sede Regional de San Carlos y Consejos Asesores de Carrera de la Sede Regional de San Carlos
               </div>
               <div class="mdl-card__actions mdl-card--border">
-                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href=" https://templateflip.com/templates/material-portfolio/" target="_blank">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#" target="_blank">
                   Conócenos
                 </a>
               </div>
