--- a/index.html
+++ b/index.html
@@ -11,16 +11,7 @@
   <link rel="stylesheet" href="styles/colorpag.css">
   <link href="styles/main.css" rel="stylesheet">
   
-  <link rel="stylesheet" type="text/css" href="scripts/jquery.jscrollpane.min.js" />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="jquery.jscrollpane.min.js"></script>
-    <script type="text/javascript">
-      jQuery(document).ready(function () {
-          if (!jQuery.browser.webkit) {
-              jQuery('.site-content').jScrollPane();
-          }
-      });
-    </script>
+
 </head>
 <body id="top">
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -30,7 +21,7 @@
         <div class="site-logo"></div><span class="site-description">Grupo Progreso Zona Norte</span></span></div>
         
         <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
-          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a id="active"class="mdl-navigation__link" href="index.html">Inicio</a><a class="mdl-navigation__link" href="#">Candidatos</a><a class="mdl-navigation__link" href="#">Consejos</a><a class="mdl-navigation__link" href="#">Contáctenos</a>
+          <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a id="active"class="mdl-navigation__link" href="index.html">Inicio</a><a class="mdl-navigation__link" href="candidatos.html">Candidatos</a><a class="mdl-navigation__link" href="#">Consejos</a><a class="mdl-navigation__link" href="#">Contáctenos</a>
           </nav>
         </div>
         
