--- a/candidatos.html
+++ b/candidatos.html
@@ -39,7 +39,7 @@
           <div class="container"><div class="mdl-grid site-max-width">
             <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
-                <img class="article-image" src="img/portfolio1.jpg" border="0" alt="">
+                <img class="article-image" src="img/fondo.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
                 <h2 class="mdl-card__title-text">Laura González Sánchez.</h2>
@@ -78,52 +78,53 @@
               Candidata Titular para Representante Estudiantil ante el Consejo Asesor de la Carrera de Contabilidad y Finanzas.
               </div><br>        <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-                  Learn More
+                  Leer más...
                 </a>
               </div>
             </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
-                <img class="article-image" src="img/andrea.png" border="0" alt="">
+                <img class="article-image" src="img/fondo.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Pencil Tip</h2>
+                <h2 class="mdl-card__title-text">Glenn Marín Arias</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
+              Candidato Titular para Representante Estudiantil ante el Consejo Asesor de la Carrera de Ingeniería del Software.
               </div><br>        <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-                  Learn More
+                  Leer más...
                 </a>
               </div>
             </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
-                <img class="article-image" src="img/portfolio5.jpg" border="0" alt="">
+                <img class="article-image" src="img/fondo.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Magic Leaves</h2>
+                <h2 class="mdl-card__title-text">Orlando Esquivel Vargas</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
+                Candidato Titular para Representante Estudiantil ante el Consejo Asesor de la Carrera de Ingeniería del Software.
               </div><br>        <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-                  Learn More
+                  Leer más...
                 </a>
               </div>
             </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
-                <img class="article-image" src="img/portfolio6.jpg" border="0" alt="">
+                <img class="article-image" src="img/fondo.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Water Flow</h2>
+                <h2 class="mdl-card__title-text">Pendiente de nombre</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
+                  Candidato Titular para Representante Estudiantil ante el Consejo Asesor de la Carrera de Ingeniería del Software.
               </div><br>        <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-                  Learn More
+                  Leer más...
                 </a>
               </div>
-            </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            </div><br>  
+            <!--<div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
                 <img class="article-image" src="img/portfolio7.jpg" border="0" alt="">
               </div>
@@ -134,10 +135,11 @@
                 Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
               </div><br>        <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-                  Learn More
+                  Leer más...
                 </a>
               </div>
-            </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            </div><br>   
+             <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
                 <img class="article-image" src="img/portfolio8.jpg" border="0" alt="">
               </div>
@@ -148,10 +150,11 @@
                 Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
               </div><br>        <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-                  Learn More
+                  Leer más...
                 </a>
               </div>
-            </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
+            </div><br> 
+               <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
                 <img class="article-image" src="img/portfolio9.jpg" border="0" alt="">
               </div>
@@ -162,17 +165,17 @@
                 Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim irure enim nostrud aliqua consectetur ad consectetur sunt..
               </div><br>        <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
-                  Learn More
+                  Leer más...
                 </a>
               </div>
-            </div>
+            </div>  -->
           </div></div>
         </div>
         <footer class="mdl-mini-footer">
           <div class="footer-container">
-            <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
+            <div class="mdl-logo">&copy; Diseñado por Ever Leitón </div>
             <ul class="mdl-mini-footer__link-list">
-              <li><a href="#">Privacy & Terms</a></li>
+              <li>2017</li>
             </ul>
           </div>
         </footer>
