--- a/candidatos.html
+++ b/candidatos.html
@@ -39,7 +39,7 @@
           <div class="container"><div class="mdl-grid site-max-width">
             <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
-                <img class="article-image" src="img/fondo.jpg" border="0" alt="">
+                <img class="article-image" src="img/laura.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
                 <h2 class="mdl-card__title-text">Laura González Sánchez.</h2>
@@ -97,7 +97,7 @@
               </div>
             </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
-                <img class="article-image" src="img/fondo.jpg" border="0" alt="">
+                <img class="article-image" src="img/orlando.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
                 <h2 class="mdl-card__title-text">Orlando Esquivel Vargas</h2>
