--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
           <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
             <a id="active"class="mdl-navigation__link" href="index.html">Inicio</a>
             <a class="mdl-navigation__link" href="candidatos.html">Candidatos</a>
-            <a class="mdl-navigation__link" href="#">Consejos</a>
-            <a class="mdl-navigation__link" href="#">Contáctenos</a>
+            <a class="mdl-navigation__link" href="consejos.html">Consejos</a>
+            <a class="mdl-navigation__link" href="contact.html">Contáctenos</a>
           </nav>
         </div>
 
       </header>
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Inicio</a><a class="mdl-navigation__link" href="candidatos.html">Candidatos</a><a class="mdl-navigation__link" href="#">Consejos</a><a class="mdl-navigation__link" href="#">Contáctenos</a>
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Inicio</a><a class="mdl-navigation__link" href="candidatos.html">Candidatos</a><a class="mdl-navigation__link" href="consejos.html">Consejos</a><a class="mdl-navigation__link" href="#">Contáctenos</a>
         </nav>
       </div>
       
