--- a/contact.html
+++ b/contact.html
@@ -77,11 +77,11 @@
         </div>
         <footer class="mdl-mini-footer">
           <div class="footer-container">
-            <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-            <ul class="mdl-mini-footer__link-list">
-              <li><a href="#">Privacy & Terms</a></li>
-            </ul>
-          </div>
+                          <div class="mdl-logo">&copy; Diseñado por Ever Leitón </div>
+                          <ul class="mdl-mini-footer__link-list">
+                            <li>2017</li>
+                          </ul>
+                        </div>
         </footer>
       </main>
       <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
