--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,11 @@
         
       </header>
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Inicio</a><a class="mdl-navigation__link" href="candidatos.html">Candidatos</a><a class="mdl-navigation__link" href="consejos.html">Consejos</a><a class="mdl-navigation__link" href="#">Contáctenos</a>
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+          <a class="mdl-navigation__link" href="index.html">Inicio</a>
+          <a class="mdl-navigation__link" href="candidatos.html">Candidatos</a>
+          <a class="mdl-navigation__link" href="consejos.html">Consejos</a>
+          <a class="mdl-navigation__link" href="contact.html">Contáctenos</a>
         </nav>
       </div>
       
@@ -77,11 +81,11 @@
         </div>
         <footer class="mdl-mini-footer">
           <div class="footer-container">
-                          <div class="mdl-logo">&copy; Diseñado por Ever Leitón </div>
-                          <ul class="mdl-mini-footer__link-list">
-                            <li>2017</li>
-                          </ul>
-                        </div>
+            <div class="mdl-logo">&copy; Diseñado por Ever Leitón </div>
+            <ul class="mdl-mini-footer__link-list">
+              <li>2017</li>
+            </ul>
+          </div>
         </footer>
       </main>
       <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
