--- a/consejos.html
+++ b/consejos.html
@@ -24,7 +24,11 @@
         </div>        
       </header>
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Inicio</a><a class="mdl-navigation__link" href="candidatos.html">Candidatos</a><a id="active" class="mdl-navigation__link" href="consejos.html">Consejos</a><a class="mdl-navigation__link" href="contact.html">Contáctenos</a>
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
+          <a class="mdl-navigation__link" href="index.html">Inicio</a>
+        <a class="mdl-navigation__link" href="candidatos.html">Candidatos</a>
+        <a class="mdl-navigation__link" href="consejos.html">Consejos</a>
+        <a class="mdl-navigation__link" href="contact.html">Contáctenos</a>
         </nav>
       </div>
       <main class="mdl-layout__content">
