--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <h2 class="mdl-card__title-text">Bienvenidos</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                Partido de Representantes ante Consejo Universitario, Consejo de Sede Regional de San Carlos y Consejos Asesores de Carrera de la Sede Regional de San Carlos
+                Partido de Candidatos a Representantes Estudiantiles ante Consejo Universitario, Consejo de Sede Regional de San Carlos y Consejos Asesores de Carrera de la Sede Regional de San Carlos
               </div>
               <div class="mdl-card__actions mdl-card--border">
-                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="#" target="_blank">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="candidatos.html" >
                   Conócenos
                 </a>
               </div>
