--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <a class="mdl-navigation__link" href="contact.html">Contáctenos</a>
           </nav>
         </div>
-
+        
       </header>
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
         <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html">Inicio</a>
-        <a class="mdl-navigation__link" href="candidatos.html">Candidatos</a>
-        <a class="mdl-navigation__link" href="consejos.html">Consejos</a>
-        <a class="mdl-navigation__link" href="contact.html">Contáctenos</a>
+          <a class="mdl-navigation__link" href="candidatos.html">Candidatos</a>
+          <a class="mdl-navigation__link" href="consejos.html">Consejos</a>
+          <a class="mdl-navigation__link" href="contact.html">Contáctenos</a>
         </nav>
       </div>
       
@@ -68,7 +68,10 @@
                 Mensaje de los candidatos a las distintas representaciones estudiantiles.
               </div>
               <div class="mdl-card__actions  mdl-card--border">
-                <a href="#" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent">Ver video</a>
+                <a id="videobutton" href="#" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent">Ver video</a>
+              </div>
+              <div class="mdl-tooltip mdl-tooltip--large" for="videobutton">
+                Video no disponible.
               </div>
             </div>
           </section>
@@ -113,11 +116,11 @@ Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla 
 <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio.html">View Portfolio</a>
 </section>
 -->
-    <div class="homepage-footer">
-        <section class="mdl-grid site-max-width">
-          <div class="mdl-cell mdl-card mdl-cell--8-col mdl-cell--4-col-tablet  mdl-shadow--4dp portfolio-card">
-            <div class="mdl-card__title">
-              <h2 class="mdl-card__title-text">Mensaje de actuales Representantes Estudiantiles</h2>
+<div class="homepage-footer">
+  <section class="mdl-grid site-max-width">
+    <div class="mdl-cell mdl-card mdl-cell--8-col mdl-cell--4-col-tablet  mdl-shadow--4dp portfolio-card">
+      <div class="mdl-card__title">
+        <h2 class="mdl-card__title-text">Mensaje de actuales Representantes Estudiantiles</h2>
       </div>
       <ul class="demo-list-three mdl-list">
         <li class="mdl-list__item mdl-list__item--three-line">
