--- a/candidatos.html
+++ b/candidatos.html
@@ -21,8 +21,8 @@
         
         <div class="mdl-layout__header-row site-navigation-row mdl-layout--large-screen-only">
           <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-            <a id="active"class="mdl-navigation__link" href="index.html">Inicio</a>
-            <a class="mdl-navigation__link" href="candidatos.html">Candidatos</a>
+            <a class="mdl-navigation__link" href="index.html">Inicio</a>
+            <a  id="active" class="mdl-navigation__link" href="candidatos.html">Candidatos</a>
             <a class="mdl-navigation__link" href="consejos.html">Consejos</a>
             <a class="mdl-navigation__link" href="contact.html">Contáctenos</a>
           </nav>
@@ -65,7 +65,7 @@
               <div class="mdl-card__supporting-text">
                 Candidato Titular para Representante Estudiantil ante el Consejo de Sede, UTN Sede Regional de San Carlos
               </div><br>        <div class="mdl-card__actions mdl-card--border">
-                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="EverLeiton.html">
                   Leer más...
                 </a>
               </div>
@@ -117,10 +117,10 @@
                 <img class="article-image" src="img/fondo.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Pendiente de nombre</h2>
+                <h2 class="mdl-card__title-text">Mariana Vargas Benavides</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                  Candidato Titular para Representante Estudiantil ante el Consejo Asesor de la Carrera de Ingeniería del Software.
+                  Candidata Titular para Representante Estudiantil ante el Consejo Asesor de la Carrera de Ingeniería del Software.
               </div><br>        <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
                   Leer más...
