--- a/candidatos.html
+++ b/candidatos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
   
@@ -86,7 +86,7 @@
               </div>
             </div><br>    <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
-                <img class="article-image" src="img/fondo.jpg" border="0" alt="">
+                <img class="article-image" src="img/glenn.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
                 <h2 class="mdl-card__title-text">Glenn Marín Arias</h2>
