--- a/EverLeiton.html
+++ b/EverLeiton.html
@@ -84,7 +84,7 @@
                       </p>
                     </div>
                     <div class="mdl-cell mdl-cell--3-col mdl-card__supporting-text no-padding ">
-                      <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="img/MARIETH.jpg"> Ver plan<span class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span></a>
+                      <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="pdf\ever.pdf" target="_blank"> Ver plan<span class="mdl-button__ripple-container"><span class="mdl-ripple"></span></span></a>
                     </div>
                   </div>
                 </div>
