--- a/candidatos.html
+++ b/candidatos.html
@@ -30,11 +30,10 @@
   
       </header>
       <div class="mdl-layout__drawer mdl-layout--small-screen-only">
-        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font">
-          <a class="mdl-navigation__link" href="index.html">Inicio</a>
-        <a class="mdl-navigation__link" href="candidatos.html">Candidatos</a>
-        <a class="mdl-navigation__link" href="consejos.html">Consejos</a>
-        <a class="mdl-navigation__link" href="contact.html">Contáctenos</a>
+        <nav class="mdl-navigation mdl-typography--body-1-force-preferred-font"><a class="mdl-navigation__link" href="index.html"><i class="material-icons">home</i>   Inicio</a>
+          <a class="mdl-navigation__link" href="candidatos.html"><i class="material-icons">insert_emoticon</i>   Candidatos</a>
+          <a class="mdl-navigation__link" href="consejos.html"><i class="material-icons">group_work</i>   Consejos</a>
+          <a class="mdl-navigation__link" href="contact.html"><i class="material-icons">contact_mail</i>   Contáctenos</a>
         </nav>
       </div>
       <main class="mdl-layout__content">
