--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
             </div>
             <div id="contador"class="mdl-card__supporting-text">
             </div>
+            <div class="mdl-card__title">
+              
+            </div>
               <div class="fb-likemdl-card__supporting-text" data-share="true" data-width="450" data-show-faces="true"> 
                 Siguenos en facebook
               </div>
