--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="mdl-card__title">
               
             </div>
-              <div class="fb-likemdl-card__supporting-text" data-share="true" data-width="450" data-show-faces="true"> 
+              <div class="fb-like  mdl-card__supporting-text" data-share="true" data-width="450" data-show-faces="true"> 
                 Siguenos en facebook
               </div>
             
