--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <meta property="og:url" content="https://reutn.github.io/gpzn/"/>
+  <meta property="og:url" content="https://reutn.github.io/gpzn"/>
   <meta property="og:title" content="GPZN" />
-  <meta property="og:description" content="Hola" />
-  <meta property="og:image" content="https://reutn.github.io/gpzn/img/cover.jpg" />
+  
+  <meta property="og:image" content="https://reutn.github.io/gpzn/img/cover" />
   
   <title>GP-ZN</title>
   <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
