--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="es-ES">
 <head>
   <meta charset="UTF-8">
+  <title>GP-ZN</title>
+  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <meta property="og:url" content="https://reutn.github.io/gpzn/"/>
-  <meta property="og:title" content="GP-ZN"/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:image" content="https://reutn.github.io/gpzn/img/cover.jpg"/>
+  <meta property="og:url"                content="https://reutn.github.io/gpzn/" />
+<meta property="og:type"               content="website" />
+<meta property="og:title"              content="GP-ZN" />
+<meta property="og:description"        content="Postulantes a Representantes Estudiantiles" />
+<meta property="og:image"              content="https://reutn.github.io/gpzn/img/cover.jpg" />
   
-  <title>GP-ZN</title>
-  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+  
   <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="styles/colorpag.css">
@@ -67,7 +69,7 @@
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) {return;}
     js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/es_Es/sdk.js";
+    js.src = "//connect.facebook.net/es_ES/sdk.js";
     fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));
   </script>
