--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <meta property="og:title"              content="GP-ZN" />
 <meta property="og:description"        content="Postulantes a Representantes Estudiantiles" />
 <meta property="og:image"              content="https://reutn.github.io/gpzn/img/cover.jpg" />
+<meta property="fb:app_id"              content="1170182639746321" />
   
   
   <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;amp;lang=en" rel="stylesheet">
