--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:url"                content="https://reutn.github.io/gpzn/" />
 <meta property="og:type"               content="website" />
 <meta property="og:title"              content="GP-ZN" />
-<meta property="og:description"        content="Postulantes a Representantes Estudiantiles" />
+<meta property="og:description"        content="Postulantes a Representantes Estudiantiles, UTN CR, Elecciones 2017 #SomosUTN #SomosUPública" />
 <meta property="og:image"              content="https://reutn.github.io/gpzn/img/cover.jpg" />
 <meta property="fb:app_id"              content="1170182639746321" />
   
