--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
               
               <div id="contenedorFotos">
                 <div class="ws_images"><ul>
-                  <li><img src="assets/data1/images/img.jpg" title="Grupo Progreso" id="wows1_0"/></li>
-                  <li><img src="assets/data1/images/img2.jpg" title="Juntos formaremos un equipo de trabajo, para luchar por el bienestar de todos" id="wows1_1"/></li>
-                  <li><img src="assets/data1/images/img3.jpg" title="Candidatos 2017" id="wows1_2"/></li>
-                  <li><img src="assets/data1/images/imh4.jpg" title="Zona Norte" id="wows1_3"/></li>
+                  <li><img src="assets/data1/images/img.jpg" title="" id="wows1_0"/></li>
+                  <li><img src="assets/data1/images/img2.jpg" title="" id="wows1_1"/></li>
+                  <li><img src="assets/data1/images/img3.jpg" title="" id="wows1_2"/></li>
+                  <li><img src="assets/data1/images/imh4.jpg" title="" id="wows1_3"/></li>
                 </ul></div>
                 
               </div>	
@@ -147,7 +147,6 @@
                 </div>
                 <div class="mdl-card__menu">
                   <div class="fb-like" data-href="https://reutn.github.io/gpzn/" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="true"></div>
-                  <div class="fb-share-button" data-href="https://reutn.github.io/gpzn/" data-layout="button_count" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Freutn.github.io%2Fgpzn%2F&amp;src=sdkpreparse">Compartir</a></div>
                 </div> 
                </div> 
               </section>
