--- a/candidatos.html
+++ b/candidatos.html
@@ -56,7 +56,7 @@
             </div>
             <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
               <div class="mdl-card__media">
-                <img class="article-image" src="img/ever.jpg" border="0" alt="">
+                <img class="article-image" src="https://scontent-mia1-1.xx.fbcdn.net/v/t1.0-9/17634375_735743423265115_7995729796692495597_n.jpg?oh=f7d8faada4bfceec8f30d54d711a9d1b&oe=59561C0C" border="0" alt="">
               </div>
               <div class="mdl-card__title">
                 <h2 class="mdl-card__title-text">Ever Leitón Medina</h2>
@@ -116,10 +116,10 @@
                 <img class="article-image" src="img/fondo.jpg" border="0" alt="">
               </div>
               <div class="mdl-card__title">
-                <h2 class="mdl-card__title-text">Mariana Vargas Benavides</h2>
+                <h2 class="mdl-card__title-text">Raquel Blanco Alfaro</h2>
               </div>
               <div class="mdl-card__supporting-text">
-                  Candidata Titular para Representante Estudiantil ante el Consejo Asesor de la Carrera de Ingeniería del Software.
+                  Candidata Titular para Representante Estudiantil ante el Consejo Asesor de la Carrera de Asistencia Administrativa.
               </div><br>        <div class="mdl-card__actions mdl-card--border">
                 <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--accent" href="portfolio-page.html">
                   Leer más...
